--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ before_deploy:
   - ionic state restore # install cordova stuff from package.json
   - ionic build android
 
-deploy:
-  provider: script
-  script: .travis/deploy.sh
-  skip_cleanup: true
+#deploy:
+#  provider: script
+#  script: .travis/deploy.sh
+#  skip_cleanup: true
