--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,21 @@
 # Configuration
 #
 
-language: android
+language: node_js
 
-android:
-  components:
-    - android-23
-    - build-tools-23.0.2
-    - platform-tools
-
-env:
-  - CXX=g++-4.8
+node_js:
+  - "4.1"
+  - "4.0"
+  - "0.12"
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+  - "iojs"
 
 notifications:
   email: true
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
 
 sudo: required
 
@@ -29,29 +24,17 @@ branches:
   only:
   - master
 
-#
-# Build Lifecycle:
-#
-
-before_install:
-  - rm -rf /home/travis/.nvm                                         #
-  - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -   # upgrade node manually as we're building on
-  - sudo apt-get install -y nodejs                                   # android language and can't pick it in yml
-  - sudo npm update -g npm
-  # The following three lines came from angular-seed, unsure
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-
 install:
   - npm install
   - npm install ionic-app-lib
 
 before_script:
 
-script: npm test
+script: 
+  - npm postinstall
+  - npm test
 
-after_failure: cat /home/travis/build/lathonez/clicker/npm-debug.log
+after_failure: cat /home/travis/build/udayakanth1122/ionic2-karma-jasmine-travis-seed-project/npm-debug.log
 
 after_success:
   # push compiled TS to test folder in git for reference in coveralls
@@ -64,9 +47,3 @@ before_deploy:
   # build for android
   - sudo npm install -g cordova ionic
   - ionic state restore # install cordova stuff from package.json
-  - ionic build android
-
-#deploy:
-#  provider: script
-#  script: .travis/deploy.sh
-#  skip_cleanup: true
