--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ branches:
 install:
   - npm install
   - npm install ionic-app-lib
+  - npm install -g ionic@beta
 
 before_script:
 
@@ -46,4 +47,5 @@ after_success:
 before_deploy:
   # build for android
   - sudo npm install -g cordova ionic
+  - sudo npm install -g ionic@beta
   - ionic state restore # install cordova stuff from package.json
