--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,16 @@ branches:
   only:
   - master
 
+before_install:
+ - rm -rf /home/travis/.nvm                                         #
+ - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -   # upgrade node manually as we're building on
+ - sudo apt-get install -y nodejs                                   # android language and can't pick it in yml
+ - sudo npm update -g npm
+ # The following three lines came from angular-seed, unsure
+ - export CHROME_BIN=chromium-browser
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ 
 install:
   - npm install
   - npm install ionic-app-lib
