--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,8 @@ env:
  - CXX=g++-4.8
  
 after_success:
-  - git checkout master
+  # push compiled TS to test folder in git for reference in coveralls
+  - .travis/push_built_tests.sh
   # Send coverage info off to cloud ppl
   - cat coverage/lcov.info | node_modules/.bin/coveralls
   - cat coverage/lcov.info | ./node_modules/.bin/codecov
