--- a/.travis.yml
+++ b/.travis.yml
@@ -21,26 +21,27 @@ install:
   - npm install
   - npm install ionic-app-lib
   - npm install --save-dev ionic@beta
-  
+
 before_script:
 
 script: npm test
 
 notifications:
   email: true
-  
+
 after_failure: cat /home/travis/build/udayakanth1122/ionic2-karma-jasmine-travis-seed-project/npm-debug.log
 
 branches:
   only:
   - master
-  
+
 env:
  - CXX=g++-4.8
- 
+
 after_success:
   # push compiled TS to test folder in git for reference in coveralls
-  - .travis/push_built_tests.sh
+  # - .travis/push_built_tests.sh
+  - git checkout master
   # Send coverage info off to cloud ppl
   - cat coverage/lcov.info | node_modules/.bin/coveralls
   - cat coverage/lcov.info | ./node_modules/.bin/codecov
