--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ after_success:
   # push compiled TS to test folder in git for reference in coveralls
   # - .travis/push_built_tests.sh
   - git checkout master
+  - git checkout .
   # Send coverage info off to cloud ppl
   - cat coverage/lcov.info | node_modules/.bin/coveralls
   - cat coverage/lcov.info | ./node_modules/.bin/codecov
