--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,20 @@ sudo: true
 services:
 
 before_install:
-- npm update -g npm
-- npm --version
-- export CHROME_BIN=chromium-browser
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+# - npm update -g npm
+# - npm --version
+# - export CHROME_BIN=chromium-browser
+# - export DISPLAY=:99.0
+# - sh -e /etc/init.d/xvfb start
+  - rm -rf /home/travis/.nvm                                         #
+  - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -   # upgrade node manually as we're building on
+  - sudo apt-get install -y nodejs                                   # android language and can't pick it in yml
+  - sudo npm update -g npm
+  - sudo npm install -g ionic-app-lib
+  # The following three lines came from angular-seed, unsure
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 install:
   - npm install
