--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
   matrix:
   - CXX=g++-4.8
 after_success:
-- .travis/push_built_tests.sh
+#- .travis/push_built_tests.sh
 - cat coverage/lcov.info | node_modules/.bin/coveralls
 - cat coverage/lcov.info | ./node_modules/.bin/codecov
 deploy:
