--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,19 @@ env:
   matrix:
   - CXX=g++-4.8
 after_success:
-- .travis/push_built_tests.sh
-- cat coverage/lcov.info | node_modules/.bin/coveralls
-- cat coverage/lcov.info | ./node_modules/.bin/codecov
+  # push compiled TS to test folder in git for reference in coveralls
+  - .travis/push_built_tests.sh
+  # Send coverage info off to cloud ppl
+  - cat coverage/lcov.info | node_modules/.bin/coveralls
+  - cat coverage/lcov.info | ./node_modules/.bin/codecov
+
+before_deploy:
+  # build for android
+  - sudo npm install -g cordova ionic
+  - ionic state restore # install cordova stuff from package.json
+  - ionic build android
+
 deploy:
-- provider: script
-- script: .travis/deploy.sh
-- skip_cleanup: true
+  provider: script
+  script: .travis/deploy.sh
+  skip_cleanup: true
