using old encryption

--- a/ionic.project
+++ b/ionic.project
@@ -1,6 +1,6 @@
 {
-  "name": "testapp",
-  "app_id": "82fcd936",
+  "name": "testApp",
+  "app_id": "d51c5324",
   "gulpStartupTasks": [
     "sass",
     "watch"
