--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,12 @@ branches:
 env:
   matrix:
   - CXX=g++-4.8
-#after_success:
+after_success:
   # push compiled TS to test folder in git for reference in coveralls
-  #- .travis/push_built_tests.sh
+  - .travis/push_built_tests.sh
   # Send coverage info off to cloud ppl
-  #- cat coverage/lcov.info | node_modules/.bin/coveralls
-  #- cat coverage/lcov.info | ./node_modules/.bin/codecov
+  - cat coverage/lcov.info | node_modules/.bin/coveralls
+  - cat coverage/lcov.info | ./node_modules/.bin/codecov
 
 deploy:
   provider: script
